[FIX] Filter alignment

--- a/sovtimer/static/sovtimer/css/aa-sov-timer.css
+++ b/sovtimer/static/sovtimer/css/aa-sov-timer.css
@@ -96,4 +96,8 @@
         color: var(--bs-body-color);
         padding: 0.375rem;
     }
+
+    table.dataTable .dt-column-header div.dtcc-search-title {
+        display: none;
+    }
 }
